---------------------------------------------------------------------------------------------------
Version: 0.2.15
Date: 2020-12-02
  Bugfixes:
    - fixing crash when research is finished during reopened help panel whith that research displayed (again)
  Changes:
    - For assembly machines showing items of current recipe
---------------------------------------------------------------------------------------------------
Version: 0.2.14
Date: 2020-12-02
  Bugfixes:
    - fixing Error while running event ingteb:on_init()
    - fixing initialisation order problems
---------------------------------------------------------------------------------------------------
Version: 0.2.13
Date: 2020-12-01
  Bugfixes:
    - fixing group and subgroup tabs are also created when there is only one tab
    - fixing crash when research is finished during reopened help panel whith that research displayed
    - fixing crash with assertion
  Refactor:
    - better naming
---------------------------------------------------------------------------------------------------
Version: 0.2.12
Date: 2020-12-01
  Bugfixes:
    - fixing several UI-crashes
  Changes:
    - new selector
    - correct size of tab headers
---------------------------------------------------------------------------------------------------
Version: 0.2.11
Date: 2020-11-30
  Bugfixes:
    - fixed miners (and pumpjacks too) do not show machine-column
  Changes:
    - Localisation
---------------------------------------------------------------------------------------------------
Version: 0.2.10
Date: 2020-11-30
  Changes:
    - fixing release problem
---------------------------------------------------------------------------------------------------
Version: 0.2.9
Date: 2020-11-30
  Bugfixes:
    - fixed crash when loading autosave file with open help panel
  Refactor:
    - splitting Gui.lua
    - making events unconditional (except on-tick)
    - old Main.lua removed